crates/solidity/testing/snapshots/bindings_output/user_types/top_level/generated/0.7.1-failure.txt
# This file is generated automatically by infrastructure scripts (crates/solidity/outputs/cargo/tests/src/bindings_output/runner.rs:37:18). Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or EnumKeyword or FunctionKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword or StructKeyword.
   ╭─[input.sol:8:1]
   │
 8 │ type TopLevel is uint256;
   │ ─────────────┬────────────  
   │              ╰────────────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     function test() public pure returns (uint) {
   │              ──┬─  
   │                ╰─── name: 2
 3 │         TopLevel tl = TopLevel.wrap(20);
   │         ────┬─── ─┬   ────┬─── ──┬─  
   │             ╰──────────────────────── unresolved
   │                   │       │      │   
   │                   ╰────────────────── name: 3
   │                           │      │   
   │                           ╰────────── unresolved
   │                                  │   
   │                                  ╰─── unresolved
 4 │         return TopLevel.unwrap(tl);
   │                ────┬─── ───┬── ─┬  
   │                    ╰─────────────── unresolved
   │                            │    │  
   │                            ╰─────── unresolved
   │                                 │  
   │                                 ╰── ref: 3
───╯
Definiens: 
   ╭─[input.sol:1:1]
   │
 1 │ ╭─│ ▶ contract Test {
 2 │ │ ╭─▶     function test() public pure returns (uint) {
 3 │ │ │           TopLevel tl = TopLevel.wrap(20);
   │ │ │   ────────────────────┬────────────────────  
   │ │ │                       ╰────────────────────── definiens: 3
   ┆ ┆ ┆   
 5 │ │ ├─▶     }
   │ │ │           
   │ │ ╰─────────── definiens: 2
 6 │ ├───▶ }
   │ │         
   │ ╰───────── definiens: 1
───╯
